<resources>
    <string name="app_name">ProEscRec</string>
    <string name="nombre_programa">Programa de reconstrucción de escuelas públicas</string>
    <string name="bienevenido">Bienevenido</string>
    <string name="nombre_usuario">Nombre de usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="olvide_contrasena"><u>Olvidé mi contraseña</u></string>
    <string name="ingresar">Ingresar</string>
    <string name="filtrar">Filtrar</string>
    <string name="abrir">Abrir</string>
    <string name="cerrar">Cerrar</string>
    <string name="descargar_planteles">Descargar planteles</string>
    <string name="sincronizar_datos">Sincronizar datos</string>
    <string name="cambiar_contrasena">Cambiar contraseña</string>
    <string name="descargar_titulo">Descargar datos de plateles</string>
    <string name="seleccione_entidad">Seleccione entidad</string>
    <string name="seleccione_municipio">Seleccione municipio</string>
    <string name="seleccione_asentamiento">Seleccione asentamiento</string>
    <string name="descargando_datos">Descargando los datos del plantel a la base de datos del dispositivo. Espere un momento.</string>
    <string name="cancelar">Cancelar</string>
    <string name="sincronizar_vaciar">Sincronizar y vaciar</string>
    <string name="solo_sincronizar">Solo sincronizar</string>
    <string name="sincronizar_titulo">Sincronizar datos capturados</string>
    <string name="sincronizando_servidor">Sincronizando datos con el servidor. Por favor espere.</string>
    <string name="cedula_titulo">Cédula de diagnóstico por plantel</string>
    <string name="siguiente">Siguiente</string>
    <string name="fecha_elaboracion">Fecha de elaboración:</string>
    <string name="nombre_plantel">Nombre del plantel</string>
    <string name="clave_plantel">Clave del plantel</string>
    <string name="matutino">Matutino:</string>
    <string name="vespertino">Vespertino:</string>
    <string name="nocturno">Nocturno:</string>
    <string name="nombre_director_atendio">Nombre del (la) director (a) que atendió:</string>
    <string name="mat_abreviado">Mat.</string>
    <string name="noct_abreviado">Noct.</string>
    <string name="vesp_abreviado">Vesp.</string>
    <string name="telefono_platel">Teléfono del platel:</string>
    <string name="telefono_celular">Teléfono celular del director:</string>
    <string name="whatsapp">Whatsapp:</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nivel">Nivel</string>
    <string name="preescolar">Preescolar</string>
    <string name="primaria">Primaria</string>
    <string name="secundaria">Secundaria</string>
    <string name="bachillerato">Bachillerato</string>
    <string name="superior">Superior</string>
    <string name="otro">Otro (especificar)</string>
    <string name="domiclio">Domiclio:</string>
    <string name="codigo_postal">Código postal:</string>
    <string name="estado">Estado:</string>
    <string name="ingrese_codigo_postal">Ingrese código postal</string>
    <string name="localidad">Localidad:</string>
    <string name="municipio">Municipio:</string>
    <string name="croquis_localizacion">Croquis de localización</string>
    <string name="mapa">Mapa</string>
    <string name="atras">Atrás</string>
    <string name="matricula">Matrícula</string>
    <string name="alumnos_clase">Alumnos en clase</string>
    <string name="edificio_sin_danos">Edificio sin daños:</string>
    <string name="edificio_nuevo">Edificio nuevo</string>
    <string name="total">Total:</string>
    <string name="aulas_provisionales">Aulas provisionales:</string>
    <string name="edificio_prestado">Edificio prestado:</string>
    <string name="edificio_reparado">Edificio reparado:</string>
    <string name="clases_continuan">Las clases se continúan impartiendo?</string>
    <string name="especificar_motivo">En caso de no haber clases identificar motivo:</string>
    <string name="sin_inmueble">Sin inmueble</string>
    <string name="sin_banos">Sin baños</string>
    <string name="sin_herreria">Sin herrería</string>
    <string name="sin_electricidad">sin electricidad</string>
    <string name="sin_agua">Sin agua</string>
    <string name="datos_inmueble">Datos del inmueble</string>
    <string name="tipo_estructura">Tipo de estructura</string>
    <string name="no_edificios">No. de edificios</string>
    <string name="concreto_armado">Concreto armado</string>
    <string name="estructura_metalica">Estructura metálica</string>
    <string name="mixta">Mixta</string>
    <string name="otra_especificar">Otra (especificar)</string>
    <string name="edificios_1_nivel">Número de edificios de 1 nivel</string>
    <string name="edificios_2_nivel">Número de edificios de 2 niveles</string>
    <string name="edificios_3_nivel">Número de edificios de 3 niveles</string>
    <string name="edificios_4_nivel">Número de edificios de 4 niveles</string>
    <string name="total_edificios">Total de edificios en el plantel</string>
    <string name="superficie_terreno">Superficie aproximada del terreno:</string>
    <string name="observaciones">Observaciones:</string>
    <string name="superficie_contacto">Superficie aproximada de contacto:</string>
    <string name="superficie_construccion">Superficie aproximada de construcción:</string>
    <string name="superficie_areas_libres">Superficie aproximada de áreas libres:</string>
    <string name="tipo_danos">Tipo de daños observados en el inmueble</string>
    <string name="bardas_danadas">Bardas dañadas</string>
    <string name="muros_fisurados">Muros fisurados</string>
    <string name="columnas_danadas">Columnas y/o trabes dañadas</string>
    <string name="pisos_danadas">Pisos y/o losas dañadas</string>
    <string name="edificios_inclinados">Edificios inclinados</string>
    <string name="desprendimiento_acabados">Desprendimiento de acabados</string>
    <string name="escaleras_danadas">Escaleras dañadas</string>
    <string name="pisos_fracturados">Pisos en patio fracturados</string>
    <string name="edificio_colapsado">Edificio colapsado</string>
    <string name="cisterna_fisurada">Cisterna fisurada</string>
    <string name="tuberia_hidraulica_danada">Tubería hidráulica dañada</string>
    <string name="tuberia_sanitaria_danada">Tubería sanitaria dañada</string>
    <string name="tuberia_electrica_danada">Tubería eléctrica dañada</string>
    <string name="iniciaron_trabajos_reparacion">Ya se iniciaron los trabajos de reparación?</string>
    <string name="avance_aproximado">Avance aproximado de los trabajos de reparación:</string>
    <string name="fecha_programada_conclusion">Fecha programada de conclusión de los trabajos de reparación:</string>
    <string name="motivo_suspension_trabajos">Motivo de suspensión de los trabajos de rehabilitación:</string>
    <string name="falta_pago">Falta de pago</string>
    <string name="se_desconoce">Se desconoce</string>
    <string name="recurso_insuficiente">Recurso insuficiente</string>
    <string name="monto_contrato_reparacion">Monto del contrato para la reparación y/o reconstrucción:</string>
    <string name="crecurso_concluye_reparacion">Con qué recurso se concluye la reparación total?:</string>
    <string name="monto_aprox_conclusion">En su caso, monto aproximado para conclusión de trabajos:</string>
    <string name="guardar">Guardar</string>
</resources>
