<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_main"
    tools:context=".view.DescargarPlantelesActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descargar_titulo"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:id="@+id/titulo"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/seleccione_entidad"
        android:spinnerMode="dialog"
        android:id="@+id/spinner_entidad"
        android:layout_marginTop="40dp"
        style="@style/spinner_style"
        app:layout_constraintTop_toBottomOf="@+id/titulo"
        app:layout_constraintLeft_toLeftOf="parent">
    </Spinner>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/seleccione_municipio"
        android:spinnerMode="dialog"
        android:id="@+id/spinner_municipio"
        android:layout_marginTop="40dp"
        style="@style/spinner_style"
        app:layout_constraintTop_toBottomOf="@+id/spinner_entidad"
        app:layout_constraintLeft_toLeftOf="parent">
    </Spinner>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/seleccione_asentamiento"
        android:spinnerMode="dialog"
        android:id="@+id/spinner_asentamiento"
        android:layout_marginTop="40dp"
        style="@style/spinner_style"
        app:layout_constraintTop_toBottomOf="@+id/spinner_municipio"
        app:layout_constraintLeft_toLeftOf="parent">
    </Spinner>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ingresar"
        android:layout_marginTop="30dp"
        android:drawableStart="@drawable/download_white"
        android:drawablePadding="5dp"
        android:text="@string/descargar_planteles"
        android:textSize="28sp"
        android:textColor="@color/icons"
        android:background="@color/colorPrimaryDark"
        android:padding="5dp"
        android:elevation="5dp"
        android:shadowRadius="5"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@id/spinner_asentamiento"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ProgressBar
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:indeterminate="true"
        android:max="100"
        android:backgroundTint="@color/icons"
        android:indeterminateTint="@color/colorPrimary"
        android:layout_margin="20dp"

        app:layout_constraintTop_toBottomOf="@id/ingresar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descargando_datos"
        app:layout_constraintTop_toBottomOf="@id/progressbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>