<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_main"
    tools:context=".view.Form1Activity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cedula_titulo"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/primary_text"
        app:layout_constraintTop_toBottomOf="@+id/titulo"
        app:layout_constraintEnd_toEndOf="parent">

    </View>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fecha"
        android:text="dd/mm/yyyy"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/titulo"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha_elaboracion"
        android:textStyle="bold"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toTopOf="@+id/fecha"
        app:layout_constraintEnd_toStartOf="@+id/fecha"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/primary_text"
        app:layout_constraintTop_toBottomOf="@+id/fecha"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nombre_plantel"
        android:id="@+id/nom_plantel_titulo"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/layout_clave"
        app:layout_constraintBottom_toBottomOf="@+id/layout_clave"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintWidth_percent=".16"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/nombre_plantel"
        android:layout_marginStart="5dp"
        android:text="Preescolar Gustavo Baz AEP"
        app:layout_constraintTop_toTopOf="@+id/layout_clave"
        app:layout_constraintBottom_toBottomOf="@+id/layout_clave"
        app:layout_constraintLeft_toRightOf="@+id/nom_plantel_titulo"
        app:layout_constraintWidth_percent=".5"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/clave_plantel"
        android:id="@+id/clave"
        android:textStyle="bold"
        android:paddingStart="5dp"
        app:layout_constraintTop_toTopOf="@+id/layout_clave"
        app:layout_constraintBottom_toBottomOf="@+id/layout_clave"
        app:layout_constraintLeft_toRightOf="@+id/nombre_plantel"
        app:layout_constraintWidth_percent=".1"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="5dp"
        android:layout_marginTop="10dp"
        android:id="@+id/layout_clave"
        app:layout_constraintTop_toBottomOf="@+id/fecha"
        app:layout_constraintLeft_toRightOf="@+id/clave"
        app:layout_constraintWidth_percent=".12">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/matutino"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vespertino"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nocturno"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/fecha"
        app:layout_constraintLeft_toRightOf="@+id/layout_clave"
        app:layout_constraintWidth_percent=".12">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="15EJN2018"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/primary_text"
        app:layout_constraintTop_toBottomOf="@+id/layout_clave"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nombre_director_atendio"
        android:id="@+id/director_atendio"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/nombre_director"
        app:layout_constraintBottom_toBottomOf="@+id/nombre_director"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintWidth_percent=".5"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/nombre_director"
        app:layout_constraintTop_toBottomOf="@+id/layout_clave"
        app:layout_constraintLeft_toRightOf="@+id/director_atendio"
        app:layout_constraintWidth_percent=".5"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/primary_text"
        app:layout_constraintTop_toBottomOf="@+id/nombre_director"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/director_mat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/mat_abreviado"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nom_dir_mat"
        app:layout_constraintBottom_toBottomOf="@+id/nom_dir_mat"
        app:layout_constraintWidth_percent=".11" />

    <CheckBox
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/nom_dir_mat"
        app:layout_constraintLeft_toRightOf="@+id/director_mat"
        app:layout_constraintTop_toBottomOf="@+id/nombre_director"
        app:layout_constraintWidth_percent=".22"/>

    <TextView
        android:id="@+id/director_vesp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/vesp_abreviado"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/nom_dir_mat"
        app:layout_constraintTop_toTopOf="@+id/nom_dir_mat"
        app:layout_constraintBottom_toBottomOf="@+id/nom_dir_mat"
        app:layout_constraintWidth_percent=".11" />

    <CheckBox
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/nom_dir_vesp"
        app:layout_constraintLeft_toRightOf="@+id/director_vesp"
        app:layout_constraintTop_toBottomOf="@+id/nombre_director"
        app:layout_constraintWidth_percent=".22"/>

    <TextView
        android:id="@+id/director_noct"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/noct_abreviado"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/nom_dir_vesp"
        app:layout_constraintTop_toTopOf="@+id/nom_dir_mat"
        app:layout_constraintBottom_toBottomOf="@+id/nom_dir_mat"
        app:layout_constraintWidth_percent=".11" />

    <CheckBox
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/nom_dir_noct"
        app:layout_constraintLeft_toRightOf="@+id/director_noct"
        app:layout_constraintTop_toBottomOf="@+id/nombre_director"
        app:layout_constraintWidth_percent=".22"/>

    <Button
        android:id="@+id/cancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:drawableStart="@drawable/cloud_sync"
        android:drawablePadding="5dp"
        android:elevation="5dp"
        android:enabled="false"
        android:padding="5dp"
        android:shadowRadius="5"
        android:text="@string/cancelar"
        android:textColor="@color/icons"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/siguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:drawableStart="@drawable/cloud_sync"
        android:drawablePadding="5dp"
        android:elevation="5dp"
        android:enabled="false"
        android:padding="5dp"
        android:shadowRadius="5"
        android:text="@string/siguiente"
        android:textColor="@color/icons"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/cancelar" />

</androidx.constraintlayout.widget.ConstraintLayout>