<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_main"
    tools:context=".view.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/fondo_escuela"
        android:id="@+id/fondo_escuela"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHeight_percent=".36"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienevenido"
        android:textSize="48sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:id="@+id/bienvenido"
        app:layout_constraintTop_toBottomOf="@id/fondo_escuela"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_programa"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="40dp"
        android:id="@+id/nombre_programa"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bienvenido" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_usuario"
        android:layout_marginTop="30dp"
        android:drawableStart="@drawable/account"
        android:drawablePadding="5dp"
        android:inputType="textNoSuggestions"
        android:id="@+id/nombre_usuario"
        android:textSize="28sp"
        app:layout_constraintTop_toBottomOf="@id/nombre_programa"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/contrasena"
        android:layout_marginTop="30dp"
        android:drawableStart="@drawable/password"
        android:drawablePadding="5dp"
        android:inputType="textPassword"
        android:id="@+id/contrasena"
        android:textSize="28sp"
        app:layout_constraintTop_toBottomOf="@id/nombre_usuario"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/olvide_contrasena"
        android:textSize="28sp"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"
        android:linksClickable="true"
        android:textColorLink="@color/colorPrimary"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:id="@+id/olvide_contrasena"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contrasena" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ingresar"
        android:layout_marginTop="30dp"
        android:drawableStart="@drawable/login"
        android:drawablePadding="5dp"
        android:text="@string/ingresar"
        android:textSize="28sp"
        android:textColor="@color/icons"
        android:background="@color/colorPrimaryDark"
        android:padding="5dp"
        android:elevation="5dp"
        android:shadowRadius="5"
        app:layout_constraintTop_toBottomOf="@id/olvide_contrasena"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>